properties of Rxx(m)

--- a/common/normalg.tex
+++ b/common/normalg.tex
@@ -17,11 +17,11 @@ A linear space together with such an operator is an \structd{algebra}.\footnote{
 
 There are many many possible algebras---many more than one can shake a stick at,
 as indicated by Michiel Hazewinkel in his book, \hie{Handbook of Algebras}:
-``Algebra, as we know it today (2005), 
-consists of many different ideas, concepts and results. 
-A reasonable estimate of the number of these different items 
-would be somewhere between 50,000 and 200,000. 
-Many of these have been named and many more could (and perhaps should) 
+``Algebra, as we know it today (2005),
+consists of many different ideas, concepts and results.
+A reasonable estimate of the number of these different items
+would be somewhere between 50,000 and 200,000.
+Many of these have been named and many more could (and perhaps should)
 have a ``name" or other convenient designation."\footnote{\citerpg{hazewinkel2000}{v}{044450396X}}
 
 %---------------------------------------
@@ -34,7 +34,7 @@ have a ``name" or other convenient designation."\footnote{\citerpg{hazewinkel200
 %---------------------------------------
 Let $\algA$ be an \structe{algebra}.
 \defbox{
-  \text{An algebra $\algA$ is \hid{unital} if
+  \text{An algebra $\algA$ is \propd{unital} if
   $\quad\exists u\in\algA \st ux = xu = x \qquad\forall x\in\algA$}
   }
 \end{definition}
@@ -54,7 +54,6 @@ Let $\algA$ be an \structe{unital algebra} \xref{def:ualg} with unit $e$.
 \end{array}}
 \end{definition}
 
-
 %=======================================
 \section{Star-Algebras}
 %=======================================
@@ -68,16 +67,16 @@ Let $\algA$ be an \structe{unital algebra} \xref{def:ualg} with unit $e$.
 \label{def:star_algebra}
 \label{def:staralg}
 \index{star-algebra}
-\index{algebras!$\invo$-algebra} 
+\index{algebras!$\invo$-algebra}
 \indxs{\invo}
 %---------------------------------------
 Let $\algA$ be an \structe{algebra}.
 \defbox{\begin{array}{F rcl CDD}
   \mc{7}{M}{The pair $\opair{\algA}{\invo}$ is a \structd{$\invo$-algebra}, or \structd{star-algebra}, if}
-    \\1.& \brp{x+y}^\invo       &=& x^\invo + y^\invo     & \forall x,y\in\algA                 & (\prope{distributive})     & and 
-    \\2.& (\alpha x)^\invo      &=& \bar{\alpha}x^\invo   & \forall x\in\algA,\, \alpha\in\C    & (\prope{conjugate linear}) & and 
-    \\3.& (xy)^\invo            &=& y^\invo x^\invo       & \forall x,y \in \algA               & (\prope{antiautomorphic})  & and 
-    \\4.& x^{\invo\invo}        &=& x                     & \forall x \in \algA                 & (\prope{involutory}) 
+    \\1.& \brp{x+y}^\invo       &=& x^\invo + y^\invo     & \forall x,y\in\algA                 & (\prope{distributive})     & and
+    \\2.& (\alpha x)^\invo      &=& \bar{\alpha}x^\invo   & \forall x\in\algA,\, \alpha\in\C    & (\prope{conjugate linear}) & and
+    \\3.& (xy)^\invo            &=& y^\invo x^\invo       & \forall x,y \in \algA               & (\prope{antiautomorphic})  & and
+    \\4.& x^{\invo\invo}        &=& x                     & \forall x \in \algA                 & (\prope{involutory})
   \\\mc{7}{M}{The operator $\invo$ is called an \opd{involution} on the algebra $\algA$.}
 \end{array}}
 \end{definition}
@@ -105,7 +104,7 @@ Let $e$ be the unit element of $\opair{\algA}{\invo}$.
 \begin{enumerate}
   \item Proof that $e^\invo = e$:\label{item:nalg_x*-1_e}
     \begin{align*}
-      x\,e^\invo 
+      x\,e^\invo
         &= \brp{x\,e^\invo}^{\invo\invo}
         && \text{by \prope{involutory} property of $\invo$}
         && \text{\xref{def:staralg}}
@@ -121,7 +120,7 @@ Let $e$ be the unit element of $\opair{\algA}{\invo}$.
         && \text{by \prope{involutory} property of $\invo$}
         && \text{\xref{def:staralg}}
       \\
-      e^\invo\,x 
+      e^\invo\,x
         &= \brp{e^\invo\,x}^{\invo\invo}
         && \text{by \prope{involutory} property of $\invo$}
         && \text{\xref{def:staralg}}
@@ -172,9 +171,9 @@ Let $e$ be the unit element of $\opair{\algA}{\invo}$.
 Let $\opair{\algA}{\normn}$ be a \structe{$\invo$-algebra} \xref{def:staralg}.
 \defboxp{
   \begin{liste}
-    \item An element $x\in\algA$ is \hid{hermitian} or \hid{self-adjoint} if $x^\invo=x$.
-    \item An element $x\in\algA$ is \hid{normal} if $xx^\invo=x^\invo x$.
-    \item An element $x\in\algA$ is a \hid{projection} if 
+    \item An element $x\in\algA$ is \propd{hermitian} or \propd{self-adjoint} if $x^\invo=x$.
+    \item An element $x\in\algA$ is \propd{normal} if $xx^\invo=x^\invo x$.
+    \item An element $x\in\algA$ is a \propd{projection} if
           $xx=x$ (\prope{involutory}) and $x^\invo=x$ (\prope{hermitian}).
   \end{liste}
   }
@@ -272,7 +271,7 @@ Let $\opair{\algA}{\normn}$ be a \structe{$\invo$-algebra} \xref{def:staralg}.
 \begin{theorem}
 \footnote{
   \citerpg{michel1993}{430}{048667598X},
-  \citerpg{halmos}{42}{0821813781}  
+  \citerpg{halmos}{42}{0821813781}
   }
 \label{thm:nalg_re_sa}
 %---------------------------------------
@@ -337,10 +336,10 @@ Let $\opair{\algA}{\invo}$ be a \structe{$\invo$-algebra} \xref{def:staralg}.
     \item Proof that $ a =  x + i y \implies  x=\Real a \quad\text{and}\quad  y=\Imag a$:
       \begin{align*}
                    &&  a  &=  x + i y                 && \text{by left hypothesis}
-        \\\implies &&  a^\invo &= \brp{ x+i y}^\invo  
+        \\\implies &&  a^\invo &= \brp{ x+i y}^\invo
                    && \text{by definition of \fncte{adjoint}}
                    && \text{\xref{def:op_adjoint}}
-        \\         &&       &=  x^\invo - i y^\invo   
+        \\         &&       &=  x^\invo - i y^\invo
                    && \text{by \prope{distributive} property of $\invo$}
                    && \text{\xref{def:star_algebra}}
         \\         &&       &=  x - i y           && \text{by \prefp{thm:nalg_re_sa}}
@@ -349,15 +348,15 @@ Let $\opair{\algA}{\invo}$ be a \structe{$\invo$-algebra} \xref{def:staralg}.
         \\\implies &&  x+ x &=  a+ a^\invo         && \text{by adding previous 2 equations}
         \\\implies && 2 x &=  a+ a^\invo             && \text{by solving for $ x$ in previous equation}
         \\\implies &&  x  &= \frac{1}{2}\brp{ a+ a^\invo}
-        \\         &&       &= \Real a                
-                   && \text{by definition of $\Re$} 
+        \\         &&       &= \Real a
+                   && \text{by definition of $\Re$}
                    && \text{\xref{def:nalg_Re}}
-        \\         && 
+        \\         &&
         \\         && i y &=  a  -  x           && \text{by solving for $i y$ in $ a = x+i y$ equation}
         \\         && i y &= - a^\invo +  x          && \text{by solving for $i y$ in $ a = x+i y$ equation}
         \\\implies && i y+i y &=  a- a^\invo       && \text{by adding previous 2 equations}
         \\\implies &&  y  &= \frac{1}{2i}\brp{ a- a^\invo} && \text{by solving for $i y$ in previous equations}
-        \\         &&       &= \Imag a                
+        \\         &&       &= \Imag a
                    && \text{by definition of $\Im$}
                    && \text{\xref{def:nalg_Im}}
       \end{align*}
@@ -370,7 +369,7 @@ Let $\opair{\algA}{\invo}$ be a \structe{$\invo$-algebra} \xref{def:staralg}.
         \\&= \mcom{\frac{1}{2}\brp{ a+ a^\invo}}{$\Real a$} + i\mcom{\frac{1}{2i}\brp{ a- a^\invo}}{$\Imag a$}
           && \text{by definition of $\Re$ and $\Im$}
           && \text{\xref{def:nalg_Re}}
-        \\&= \brp{\frac{1}{2} a+\frac{1}{2} a} + 
+        \\&= \brp{\frac{1}{2} a+\frac{1}{2} a} +
              \cancelto{0}{\brp{\frac{1}{2} a^\invo-\frac{1}{2} a^\invo}}
         \\&=  a
       \end{align*}
@@ -392,12 +391,12 @@ Let $\opair{\algA}{\invo}$ be a \structe{$\invo$-algebra} \xref{def:staralg}.
 %---------------------------------------
 Let $\algA$ be an algebra.
 \defbox{\begin{array}{M}
-  The pair $\opair{\algA}{\normn}$ is a \hid{normed algebra} if
-  \\\qquad$\ds\norm{xy} \le \norm{x}\norm{y} 
-    \qquad \forall x,y\in\algA 
-    \qquad \text{\scriptsize(\hid{multiplicative condition})}
+  The pair $\opair{\algA}{\normn}$ is a \propd{normed algebra} if
+  \\\qquad$\ds\norm{xy} \le \norm{x}\norm{y}
+    \qquad \forall x,y\in\algA
+    \qquad \text{\scriptsize(\propd{multiplicative condition})}
   $\\
-  A normed algebra $\opair{\algA}{\normn}$ is a \hid{Banach algebra} if
+  A normed algebra $\opair{\algA}{\normn}$ is a \propd{Banach algebra} if
   $\opair{\algA}{\normn}$ is also a Banach space.
 \end{array}}
 \end{definition}
@@ -413,7 +412,7 @@ Let $\algA$ be an algebra.
 \end{proposition}
 \begin{proof}
   \begin{enumerate}
-    \item Define $\ff(x)\eqd zx$. That is, the function $\ff$ represents multiplication of $x$ times some 
+    \item Define $\ff(x)\eqd zx$. That is, the function $\ff$ represents multiplication of $x$ times some
           arbitrary value $z$. \label{item:ffnorm}
 
     \item Let $\delta\eqd \norm{x-y}$ and $\epsilon\eqd\norm{\ff(x)-\ff(y)}$. \label{item:deltanorm}
@@ -421,7 +420,7 @@ Let $\algA$ be an algebra.
     \item To prove that multiplication ($\ff$) is \hie{continuous} with respect to the metric generated by $\normn$,
           we have to show that we can always make $\epsilon$ arbitrarily small for some $\delta>0$.
 
-    \item And here is the proof that multiplication is indeed continuous in $\opair{\algA}{\normn}$: 
+    \item And here is the proof that multiplication is indeed continuous in $\opair{\algA}{\normn}$:
       \begin{align*}
         \norm{\ff(x)-\ff(y)}
           &\eqd\norm{zx-zy}
@@ -471,17 +470,17 @@ Let $\C$ be the field of complex numbers.
   \citerpg{folland1995}{1}{0849384907},
   \citeIpg{gelfand1964}{241}{0821820222},
   \citeP{gelfand1943},
-  \citeI{gelfand1943r} 
+  \citeI{gelfand1943r}
   }
 %\label{def:cstar_algebra}
 \label{def:cstar}
-\index{algebras!$C^\invo$-algebra} 
+\index{algebras!$C^\invo$-algebra}
 %---------------------------------------
 \defboxt{
   The triple $\hxs{\otriple{\algA}{\normn}{\invo}}$ is a \structd{$C^\invo$ algebra} if
   \\\indentx$\begin{array}{FLlD}
-      1. & \opair{\algA}{\normn}       & \text{is a Banach algebra}  & and  
-    \\2. & \opair{\algA}{\invo}        & \text{is a $\invo$-algebra} & and  
+      1. & \opair{\algA}{\normn}       & \text{is a Banach algebra}  & and
+    \\2. & \opair{\algA}{\invo}        & \text{is a $\invo$-algebra} & and
     \\3. & \norm{x^\invo x}=\norm{x}^2 & \forall x\in\algA           &.
   \end{array}$\\
   A \structd{$C^\invo$ algebra} $\otriple{\algA}{\normn}{\invo}$ is also called a \structd{C star algebra}.
@@ -499,7 +498,7 @@ Let $\C$ be the field of complex numbers.
 %---------------------------------------
 Let $\algA$ be an algebra.
 \thmbox{
-  \text{$\otriple{\algA}{\normn}{\invo}$ is a \hid{$C^\invo$ algebra}}
+  \text{$\otriple{\algA}{\normn}{\invo}$ is a \propd{$C^\invo$ algebra}}
   \qquad\implies\qquad
   \norm{x^\invo}=\norm{x}
   }
@@ -509,7 +508,7 @@ Let $\algA$ be an algebra.
   \norm{x}
     &= \frac{1}{\norm{x}}\;\norm{x}^2
   \\&= \frac{1}{\norm{x}}\;\norm{x^\invo x}
-    && \text{by definition of \structe{$C^\invo$-algebra}} 
+    && \text{by definition of \structe{$C^\invo$-algebra}}
     && \text{\xref{def:cstar}}
   \\&\le \frac{1}{\norm{x}}\;\norm{x^\invo}\norm{x}
     && \text{by definition of \structe{normed algebra}}
