more proofs for properties of Rxx(m)

--- a/common/randseq.tex
+++ b/common/randseq.tex
@@ -401,25 +401,43 @@ and $\Rxy(n,m)$  the \fncte{cross-correlation} of $\rvx$ and $\rvy$ \xxref{def:R
     &=  \Real\brs{\Rxx^\ast(-m)}
     && \text{by (2)}
   \\&=  \frac{1}{2}\brs{\Rxx^\ast(-m) + \Rxx^{\ast\ast}(-m)}
-    && \text{by definition of $\Real$ \xref{def:Re}}
+    && \text{by definition of $\Real$}
+    && \text{\xref{def:Re}}
   \\&=  \frac{1}{2}\brs{\Rxx^\ast(-m) + \Rxx(-m)}
-    && \text{by \prope{involutory} property of \structe{star-algebra}s.}
+    && \text{by \prope{involutory} property of \structe{star-algebra}s}
+    && \text{\xref{def:staralg}}
   \\&=  \frac{1}{2}\brs{\Rxx(-m) + \Rxx^\ast(-m)}
-    && \text{by \prope{involutory} property of \structe{star-algebra}s.}
   \\&=  \Real\Rxx(-m)
-    && \text{by definition of $\Real$ \xref{def:Re}}
+    && \text{by definition of $\Real$}
+    && \text{\xref{def:Re}}
   \\
   \Imag \Rxx(m)
     &=  \Imag\brs{\Rxx^\ast(-m)}
     && \text{by (2)}
   \\&=  \frac{1}{2}\brs{\Rxx^\ast(-m) - \Rxx^{\ast\ast}(-m)}
-    && \text{by definition of $\Imag$ \xref{def:Im}}
+    && \text{by definition of $\Imag$}
+    && \text{\xref{def:Im}}
   \\&=  \frac{1}{2}\brs{\Rxx^\ast(-m) - \Rxx(-m)}
     && \text{by \prope{involutory} property of \structe{star-algebra}s.}
+    && \text{\xref{def:staralg}}
   \\&=  -\frac{1}{2}\brs{\Rxx(-m) - \Rxx^\ast(-m)}
-    && \text{by \prope{involutory} property of \structe{star-algebra}s.}
   \\&=  -\Imag\Rxx(-m)
-    && \text{by definition of $\Imag$ \xref{def:Im}}
+    && \text{by definition of $\Imag$}
+    && \text{\xref{def:Im}}
+  \\
+  \abs{ \Rxx(m) }
+    &\eqd \sqrt{ \brs{\Real\Rxx( m)}^2 + \brs{ \Imag\Rxx( m)}^2 }
+  \\&=    \sqrt{ \brs{\Real\Rxx(-m)}^2 + \brs{-\Imag\Rxx(-m)}^2 }
+    &&    \text{by (3) and (4)}
+  \\&=    \sqrt{ \brs{\Real\Rxx(-m)}^2 + \brs{ \Imag\Rxx(-m)}^2 }
+  \\&\eqd \abs{ \Rxx(-m) }
+  \\
+  \angle{ \Rxx(m) }
+    &\eqd \arctan\brs{ \frac{\Imag\Rxx(m)}{\Real\Rxx(m)} }
+  \\&=    \arctan\brs{ \frac{-\Imag\Rxx(-m)}{\Real\Rxx(-m)} }
+    &&    \text{by (3) and (4)}
+  \\&=   -\arctan\brs{ \frac{\Imag\Rxx(-m)}{\Real\Rxx(-m)} }
+  \\&\eqd -\angle{ \Rxx(-m) }
 \end{align*}
 \end{proof}
 
