z-domain spectral density rework

--- a/common/dsp.tex
+++ b/common/dsp.tex
@@ -15,7 +15,7 @@ understood by the use of a special transform called the {\em Z-transform} \xref{
 The Z-transform represents linear filters by ratios of polynomials
 (a polynomial divided by a polynomial) in a free variable $z$.
 The roots of the numerator polynomial are called \structe{zeros};
-the roots of the denominator polynomial are called \structe{poles} \xref{def:pole}.
+the roots of the denominator polynomial are called \structe{poles}\ifsxref{polynom}{def:pole}.
 The location in the $z$-plane of these poles and zeros
 determine the behavior of the filter operation.
 
@@ -41,20 +41,14 @@ determine the behavior of the filter operation.
 \begin{theorem}
 \label{thm:opZ}
 %--------------------------------------
-Let $X(z)\eqd\opZ\fx[n]$ be the \ope{z-transform} of $\fx[n]$.
-\thmbox{
-  \brb{\begin{array}{rcl}
-    \Zx(z) &\eqd& \opZ\seqn{\fx[n]}
+Let $\ds\Zx(z) \eqd \opZ\seqn{\fx[n]}$ be the \ope{z-transform} \xref{def:opZ} of a sequence $\fx[n]$.
+\thmbox{\begin{array}{F>{\ds}rc>{\ds}lCD}
+      (1).&\opZ\seqn{\alpha\fx[n]} &=& \alpha\Zx(z)                    & \forall\seqn{\fx[n]}\in\spllR & and
+    \\(2).&\opZ\seqn{\fx[n-k]}     &=& z^{-k}\Zx(z)                    & \forall\seqn{\fx[n]}\in\spllR & and
+    \\(3).&\opZ\seqn{\fx[-n]}      &=& \Zx\brp{\frac{1}{z}}            & \forall\seqn{\fx[n]}\in\spllR & and
+    \\(4).&\opZ\seqn{\fx^\ast[n]}  &=& \Zx^\ast\brp{z^\ast}            & \forall\seqn{\fx[n]}\in\spllR & and
+    \\(5).&\opZ\seqn{\fx^\ast[-n]} &=& \Zx^\ast\brp{\frac{1}{z^\ast}}  & \forall\seqn{\fx[n]}\in\spllR &
   \end{array}}
-  \quad\implies\quad
-  \brb{\begin{array}{F>{\ds}rc>{\ds}lCD}
-      (1).&\opZ\seqn{\alpha\fx[n]} &=& \alpha\Zx(z)                    & \forall\seqn{x_n}\in\spllR & and
-    \\(2).&\opZ\seqn{\fx[n-k]}     &=& z^{-k}\Zx(z)                    & \forall\seqn{x_n}\in\spllR & and
-    \\(3).&\opZ\seqn{\fx[-n]}      &=& \Zx\brp{\frac{1}{z}}            & \forall\seqn{x_n}\in\spllR & and
-    \\(4).&\opZ\seqn{\fx^\ast[n]}  &=& \Zx^\ast\brp{z^\ast}            & \forall\seqn{x_n}\in\spllR & and
-    \\(5).&\opZ\seqn{\fx^\ast[-n]} &=& \Zx^\ast\brp{\frac{1}{z^\ast}}  & \forall\seqn{x_n}\in\spllR &
-  \end{array}}
-  }
 \end{theorem}
 \begin{proof}
 \begin{align*}
