expand random sequence case studies appendix

--- a/common/projection_statistics.tex
+++ b/common/projection_statistics.tex
@@ -27,7 +27,7 @@ This amazing result is very useful in practical system implementation
 and also for proving other theoretical results
 (notably estimation and detection theorems).
 
-The concept of sufficient statistics in ``estimation theory" is very similar 
+The concept of sufficient statistics in ``estimation theory" is very similar
 to the concept of \ope{feature extraction}\footnote{
   \citerpc{bishop2006}{2}{9780387310732}{{\scshape``1. Introduction"}}
   }
@@ -745,7 +745,7 @@ Let $\estML$  be the \fncte{ML estimate} \xref{def:estML} of $\theta$.
      && \text{by \prefpp{thm:sstat}}
    \\&= \argmax_{\estT}
          \left[ -\norm{\rvy(t;\theta)-\rvx(t;\theta)}^2 \right]
-     && \text{by \thme{Plancheral's formula} 
+     && \text{by \thme{Plancheral's formula}
               \xref{thm:plancherel}}
    \\&= \argmax_{\estT}
          \left[ -\norm{\rvy(t;\theta)}^2 +2\Real\inprod{\rvy(t;\theta)}{\rvx(t;\theta)}-\norm{\rvx(t;\theta)}^2 \right]
@@ -968,7 +968,7 @@ if and only if
   \brb{\begin{array}{Frc>{\ds}lD}
      (A). & \mc{3}{M}{$\fv(t)$ is \prope{AWGN}}        & and
    \\(B). & \rvy(t;\phi) &=&     \rvx(t;\phi) + \fv(t) & and
-   \\(C). & \rvx(t;\phi) &\eqd&  A\cos(2\pi f_ct +  \phi) &  
+   \\(C). & \rvx(t;\phi) &\eqd&  A\cos(2\pi f_ct +  \phi) &
   \end{array}}
   \implies
   \brb{
@@ -1001,9 +1001,7 @@ if and only if
      && \text{because $\pderiv{}{\phi} \cos(x)=-\sin(x)$}
    \\&= \arg_\phi
          \brs{ -A\inprod{\rvy(t;\phi)}{\cos(2\pi f_ct)\sin\phi+\sin(2\pi f_ct)\cos\phi} = 0 }
-    %&& \text{because $\sin(x+y)=\sin x \cos y + \cos x \sin y$}
-     && \text{by \thme{double angle formulas}}
-     && \text{\ifsxref{harTrig}{thm:trig_double}}
+     && \text{by \thme{double angle formulas}\ifsxref{harTrig}{thm:trig_double}}
    \\&= \arg_\phi \brs{
            \sin\phi\inprod{\rvy(t;\phi)}{\cos(2\pi f_ct)} =
           -\cos\phi\inprod{\rvy(t;\phi)}{\sin(2\pi f_ct)}
@@ -1194,28 +1192,28 @@ if and only if
 \end{align*}
 \end{proof}
 
-%======================================
-\section{Example data}
-%======================================
-\begin{longtable}{|l|}
-\hline
-``Pop Goes the World" song by Men Without Hats
-\\\includegraphics[width=\tw-10mm]{../common/math/graphics/pdfs/MenWithoutHats_PopGoesWorld.jpg}
-\\\hline
-  Earthquake data
-\\\includegraphics[width=\tw-10mm,height=50mm]{../common/math/graphics/pdfs/earthquake_kapi_20180928.pdf}\footnote{\url{https://www.iris.edu/wilber3/find_stations/10953070}}
-\\\hline
-  Sunspot data
-\\\includegraphics[width=\tw-10mm,height=50mm]{../common/math/graphics/pdfs/sunspots_1749-2004.pdf}\footnote{\url{https://d32ogoqmya1dw8.cloudfront.net/files/introgeo/teachingwdata/examples/GreenwichSSNvstime.txt}}
-\\\hline
-  Dow Jones Industrial Average
-\\\includegraphics[width=\tw-10mm,height=50mm]{../common/math/graphics/pdfs/dji30_20171006-20181004.pdf}
-\\\hline
-  Ebola Sequence
-\\\includegraphics[width=\tw-10mm]{../common/math/graphics/pdfs/dna_ebola_51_seq.pdf}
-\\\hline
-\end{longtable}
-
+%!!!%======================================
+%!!!\section{Example data}
+%!!!%======================================
+%!!!\begin{longtable}{|l|}
+%!!!\hline
+%!!!``Pop Goes the World" song by Men Without Hats
+%!!!\\\includegraphics[width=\tw-10mm]{../common/math/graphics/pdfs/MenWithoutHats_PopGoesWorld.jpg}
+%!!!\\\hline
+%!!!  Earthquake data
+%!!!\\\includegraphics[width=\tw-10mm,height=50mm]{../common/math/graphics/pdfs/earthquake_kapi_20180928.pdf}\footnote{\url{https://www.iris.edu/wilber3/find_stations/10953070}}
+%!!!\\\hline
+%!!!  Sunspot data
+%!!!\\\includegraphics[width=\tw-10mm,height=50mm]{../common/math/graphics/pdfs/sunspots_1749-2004.pdf}\footnote{\url{https://d32ogoqmya1dw8.cloudfront.net/files/introgeo/teachingwdata/examples/GreenwichSSNvstime.txt}}
+%!!!\\\hline
+%!!!  Dow Jones Industrial Average
+%!!!\\\includegraphics[width=\tw-10mm,height=50mm]{../common/math/graphics/pdfs/dji30_20171006-20181004.pdf}
+%!!!\\\hline
+%!!!  Ebola Sequence
+%!!!\\\includegraphics[width=\tw-10mm]{../common/math/graphics/pdfs/dna_ebola_51_seq.pdf}
+%!!!\\\hline
+%!!!\end{longtable}
+%!!!
 %\includegraphics[width=\tw-10mm]{../common/math/graphics/pdfs/fdie_5eed_51_seq.pdf}
 
 %\footnote{
@@ -1268,8 +1266,8 @@ The whitening filter makes the received signal $\rvy(t;\theta)$ statistically wh
 any orthonormal basis set can be used to generate sufficient statistics.
 
 \paragraph{Wavelets.}
-Wavelets have the property that they tend to whiten data. 
-For more information, see 
+Wavelets have the property that they tend to whiten data.
+For more information, see
 \citerppgc{walter}{329}{350}{9781584882275}{``Chapter 14 Orthogonal Systems and Stochastic Processes"},
 \citerg{mallat}{9780124666061},
 \citeP{johnstone1997},
