--- a/common/sunspots.tex
+++ b/common/sunspots.tex
@@ -3,14 +3,27 @@
 % Daniel J. Greenhoe
 %============================================================================
 
+%=======================================
+\section{Sunspots}
+%=======================================
+%=======================================
+\subsection{Time Series}
+%=======================================
+%---------------------------------------
+\begin{example}[\exmd{Sunspot time series}]
+\label{ex:sunspots}
+%---------------------------------------
 Sunspot data:\footnote{\citer{wdcsilo_sunspot_20210524}}
 %\\\includegraphics[width=\tw-10mm,height=50mm]{../common/math/graphics/pdfs/sunspots_1749-2004.pdf}\footnote{\url{https://d32ogoqmya1dw8.cloudfront.net/files/introgeo/teachingwdata/examples/GreenwichSSNvstime.txt}}
 \\\includegraphics[width=\tw]{../common/math/graphics/pdfs/sunspots.pdf}
-\\The period the sunspot activity can be estimated using several methods\ldots
+\end{example}
 
+%=======================================
+\subsection{Period Estimation}
+%=======================================
+The period the sunspot activity can be estimated using several methods\ldots
 %---------------------------------------
 \begin{example}[\exmd{Sunspot period estimation using ACF}]
-\label{ex:sunspots}
 \label{ex:sunspot_period_ACF}
 %---------------------------------------
 Period estimation using an estimated \fncte{auto-correlation function} (ACF);
@@ -69,8 +82,10 @@ DFT analysis: The basis vectors are sampled sinusoids.
 %---------------------------------------
 Eigen analysis;
 \begin{enumerate}
-\item The DFT primary frequencies of the first 10 of these eigen values are \ldots
+\item Eigen pairs with 6 largest eigenvalues
 \\\includegraphics[width=\tw-12mm]{../common/math/graphics/pdfs/sunspots_eigen.pdf}
+
+\item The DFT primary frequencies using assorted ranges of largest eigen pairs
 \\$\begin{array}{|r|r|r|r|MlM|}
   \hline
      n & \lambda_n  & \mc{1}{N|}{$f$ (Hz)} & \mc{1}{N|}{$T$ (years)} & \mc{3}{N|}{Weighted period using $1$--$n$ (years)}
@@ -96,10 +111,6 @@ Eigen analysis;
 \item Eigen synthesis using 1, 6, and 105 coefficients:
 \\\includegraphics[width=\tw-12mm]{../common/math/graphics/pdfs/sunspots_eigen_syn.pdf}
 
-\item The ACF of the eigen coefficient sequence demonstrates that
-      it is much whiter than the original sunspot data sequence:
-\\\includegraphics[width=\tw-12mm]{../common/math/graphics/pdfs/sunspots_coefs_acf.pdf}
-
 \end{enumerate}
 \end{example}
 
@@ -118,4 +129,24 @@ Basis vectors:
 \\\includegraphics[width=\tw-12mm]{../common/math/graphics/pdfs/sunspots_walsh_coefs.pdf}
 \\Synthesis
 \\\includegraphics[width=\tw-12mm]{../common/math/graphics/pdfs/sunspots_walsh_syn.pdf}
+\end{example}
+
+%=======================================
+\subsection{Whitening}
+%=======================================
+%---------------------------------------
+\begin{example}[\exmd{Sunspot whitening using Eigen system}]
+\label{ex:sunspot_period_Walsh}
+%---------------------------------------
+The ACF of the eigen coefficient sequence demonstrates that
+      it is much whiter than the original sunspot data sequence:
+\\\begin{tabular}{|c|}
+  \hline
+  \includegraphics[width=\tw-12mm]{../common/math/graphics/pdfs/sunspots_acf.pdf}
+  \\ACF of original data
+  \\\hline
+  \includegraphics[width=\tw-12mm]{../common/math/graphics/pdfs/sunspots_coefs_acf.pdf}
+  \\ACF of eigen coefficient sequence
+  \\\hline
+\end{tabular}
 \end{example}
