--- a/common/randprocess.tex
+++ b/common/randprocess.tex
@@ -70,12 +70,13 @@ and \prefp{fig:X(t,w)graph}.
 \label{def:Rxx}
 \label{def:Rxy}
 %---------------------------------------
-Let $\rvx(t)$ and $\rvy(t)$ be random processes.\\
+Let $\rvx(t)$ and $\rvy(t)$ be \fncte{random process}es.
+Let $\pE$ be the \fncte{expectation operator} \xref{def:pE}.
 \defbox{
   \begin{array}{MlMlc>{\ds}l}
        The \fnctd{mean}                      & \pmeanx(t) & of $\rvx(t)$              is & \pmeanx(t)&\eqd& \pE\brs{\rvx(t)}                    %& \text{(\prope{mean functional})} \\
-     \\The \fnctd{cross-correlation}         & \Rxy(t)    & of $\rvx(t)$ and $\rvy(t)$is & \Rxy(t,u) &\eqd& \pE\brs{\rvx(t)\rvy^\ast(u)}        %& \text{(\prope{cross-correlation bilinear functional})} \\
-     \\The \fnctd{auto-correlation function} & \Rxx(t)    & of $\rvx(t)$              is & \Rxx(t,u) &\eqd& \pE\brs{\rvx(t)\rvx^\ast(u)}        %& \text{(\prope{auto-correlation bilinear functional})} \\
+     \\The \fnctd{cross-correlation}         & \Rxy(t,u)  & of $\rvx(t)$ and $\rvy(t)$is & \Rxy(t,u) &\eqd& \pE\brs{\rvx(t)\rvy^\ast(u)}        %& \text{(\prope{cross-correlation bilinear functional})} \\
+     \\The \fnctd{auto-correlation function} & \Rxx(t,u)  & of $\rvx(t)$              is & \Rxx(t,u) &\eqd& \pE\brs{\rvx(t)\rvx^\ast(u)}        %& \text{(\prope{auto-correlation bilinear functional})} \\
   \end{array}
   }
 \end{definition}
