--- a/common/vsinprod.tex
+++ b/common/vsinprod.tex
@@ -178,13 +178,11 @@ Proof that $\inprod{\vx}{\vy}=0  \impliedby \vy=\vzero$:
 
 \end{proof}
 
-One of the most useful and widely used inequalities in analysis is the
-\ineqe{Cauchy-Schwarz Inequality}
+One of the most useful and widely used inequalities in analysis is the \ineqe{Cauchy-Schwarz Inequality}
 (sometimes also called the \ineqe{Cauchy-Bunyakovsky-Schwarz Inequality}).
-\index{inequalities!Cauchy-Bunyakovsky-Schwarz}
 In fact, we will use this inequality shortly to prove that
-every inner product space {\em has} a norm
-and therefore every inner product space {\em is} a normed linear space.
+every \structe{inner product space} {\bf has} a \fncte{norm}
+and therefore every \structe{inner product space} {\bf is} a \structe{normed linear space}.
 %---------------------------------------
 \begin{theorem}[\ineqd{Cauchy-Schwarz Inequality}]
 \footnote{
@@ -1255,7 +1253,7 @@ Let $\norm{\seqxZ{x_n}}_p$ be the $\splpF$ norm\ifsxref{seq}{def:lp_norm} of the
 \index{norm!$l_2$}  \index{norm!Euclidean}
 \index{norm!$l_\infty$} \index{norm:sup}
 %--------------------------------------
-\exbox{\begin{array}{>{\text{The norm}}ll>{$\bf}l<{$}l<{\text{induce an innerproduct.}}}
+\exbox{\begin{array}{>{\text{The norm}}ll>{$\bf}l<{$}l<{\text{induce an inner product.}}}
     & \mcom{\norm{\vx} \eqd \sum_{i=1}^n \abs{x_i}                        }{\prop{$l_1$-norm} or \prop{taxi cab norm} } & does not &
   \\& \mcom{\norm{\vx} \eqd \left(\sum_{i=1}^n \abs{x_i}^2\right)^\frac{1}{2} }{\prop{$l_2$-norm} or \prop{Euclidean norm}} & does     &
   \\& \mcom{\norm{\vx} \eqd \max\set{\abs{x_i}}{\scriptstyle i=1,\dots,n} }{\prop{$l_\infty$-norm} or \prop{sup norm} } & does not &
