properties of random sequence projections

--- a/common/randseq_eigen.tex
+++ b/common/randseq_eigen.tex
@@ -23,6 +23,21 @@ with continuous \fncte{auto-correlation} $\Rxx(t,u)$ \xref{def:Rxx}.
 \end{definition}
 
 %---------------------------------------
+\begin{remark}
+\footnote{
+  \citer{fredholm1900},
+  \citerp{fredholm1903}{365},
+  \citerpg{michel1993}{97}{048667598X},
+  \citerpg{keener}{101}{0201156741}
+  }
+\label{rem:kernel}
+%---------------------------------------
+The equation $\int_{u\in\R}\Rxx(t,u)\ff(u) \du$ is a
+   \ope{Fredholm integral equation of the first kind} and
+   $\Rxx(t,u)$ is the \fncte{kernel} of the equation.
+\end{remark}
+
+%---------------------------------------
 \begin{definition}
 \label{def:white}
 %---------------------------------------
