--- a/common/spectral.tex
+++ b/common/spectral.tex
@@ -29,12 +29,11 @@ Let $\opA\in\clB{\spX}{\spY}$ be an operator over the linear spaces
 $\spX=(\setX,F,\oplus,\otimes)$ and $\spY\eqd(\setY,F,\oplus,\otimes)$.
 Let $\oppN(\opA)$ be the \structe{null space} of $\opA$.
 \defbox{\begin{array}{l}
-  \text{An \vald{eigenvalue} of $\opA$ is any value $\lambda$ such that there exists $\vx$ such that $\opA\vx=\lambda\vx$.} \\
+  \text{An \vald{eigenvalue} of $\opA$ is any value $\lambda$ such that there exists $\vx$ for which $\opA\vx=\lambda\vx$.} \\
   \text{The \structd{eigenspace} $\spH_\lambda$ of $\opA$ at eigenvalue $\lambda$ is $\oppN(\opA-\lambda\opI)$.} \\
   \text{An \vald{eigenvector} of $\opA$ associated with eigenvalue $\lambda$ is any element of $\oppN(\opA-\lambda\opI)$.}
 \end{array}}
 \end{definition}
-
 
 %--------------------------------------
 \begin{example}
