--- a/common/randprocess.tex
+++ b/common/randprocess.tex
@@ -82,18 +82,22 @@ Let $\pE$ be the \fncte{expectation operator} \xref{def:pE}.
 \end{definition}
 
 %---------------------------------------
-\begin{remark}
-\footnote{
-  \citer{fredholm1900},
-  \citerp{fredholm1903}{365},
-  \citerpg{michel1993}{97}{048667598X},
-  \citerpg{keener}{101}{0201156741}
-  }
+\begin{definition}
+%\label{def:wss}
 %---------------------------------------
-The equation $\int_{u\in\R}\Rxx(t,u)\ff(u) \du$ is a
-   \ope{Fredholm integral equation of the first kind} and
-   $\Rxx(t,u)$ is the \ope{kernel} of the equation.
-\end{remark}
+\defboxt{
+  A random process $\rvx(t)$ is \propd{wide sense stationary} (\propd{WSS}) if
+  \\\indentx$\begin{array}{FlMMD}
+   (1).& \pmeanx(t)     & is \prope{constant} with respect to $t$ & (\prope{stationary in the mean})    & and \\
+   (2).& \Rxx(t+\tau,t) & is \prope{constant} with respect to $t$ & (\prope{stationary in correlation})
+  \end{array}$
+  }
+\end{definition}
+
+If a process $\rvx(t)$ is \prope{wide sense stationary}, mean and correlation are often written
+$\pmeanx$ and $\Rxx(\tau)$, respectively.
+If a pair of processes $\rvx(t)$ and $\rvy(t)$ are \prope{WSS},
+then their cross-correlation is commonly written $\Rxy(\tau)$.
 
 %=======================================
 \section{Properties}
