include xcordef.tex

--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -113,6 +113,19 @@
   url          = {https://books.google.com/books?id=QrPuAAAAMAAJ},
   }
 
+@article{bates1955,
+  title        = {Joint Distributions of Time Intervals for the Occurrence of Successive Accidents in a Generalized Polya Scheme},
+  author       = {Grace E. Bates},
+  journal      = {The Annals of Mathematical Statistics},
+  volume       = {26},
+  number       = {4},
+  month        = {December},
+  year         = {1955},
+  pages        = {705--720},
+  url          = {https://projecteuclid.org/journals/annals-of-mathematical-statistics/volume-26/issue-4/Joint-Distributions-of-Time-Intervals-for-the-Occurrence-of-Successive/10.1214/aoms/1177728429.full},
+  urlx         = {https://projecteuclid.org/journals/annals-of-mathematical-statistics/volume-26/issue-4/Joint-Distributions-of-Time-Intervals-for-the-Occurrence-of-Successive/10.1214/aoms/1177728429.pdf}
+  }
+
 @techreport{bellman1954,
   title        = {Dynamic Programming of Continuous Processes},
   institution  = {Rand Corporation},
@@ -785,6 +798,16 @@
   urla         = {http://www.amazon.com/dp/9783319716886},
   }
 
+@article{greenhoe2019,
+  author       = {Daniel J. Greenhoe},
+  title        = {The Effects of the assorted cross-correlation definitions},
+  year         = {2019},
+  month        = {June},
+  url          = {https://www.researchgate.net/publication/333882235},
+  doi          = {10.13140/RG.2.2.15881.70240},
+  journal      = {ResearchGate.com},
+  }
+
 @book{greenhoe_abcstat,
   title        = {A Book Concerning Statistical Signal Processing},
   author       = {Daniel J. Greenhoe},
@@ -792,6 +815,18 @@
   volume       = {2},
   url          = {https://github.com/dgreenhoe/pdfs/blob/master/abcstat.pdf},
   year         = {2019},
+  }
+
+@article{hall1927,
+  author       = {Philip Hall},
+  title        = {The Distribution of Means for Samples of Size N Drawn from a Population in which the Variate Takes Values Between 0 and 1, All Such Values Being Equally Probable},
+  journal      = {Biometrika},
+  volume       = {19},
+  number       = {3/4},
+  month        = {December},
+  year         = {1927},
+  pages        = {240--245},
+  url          = {https://doi.org/10.2307/2331961}
   }
 
 @incollection{haykin1979,
@@ -818,16 +853,6 @@
   pages        = {9--72},
   year         = {1983},
   author       = {S. Haykin and S. Kesler},
-  }
-
-@article{greenhoe2019,
-  author       = {Daniel J. Greenhoe},
-  title        = {The Effects of the assorted cross-correlation definitions},
-  year         = {2019},
-  month        = {June},
-  url          = {https://www.researchgate.net/publication/333882235},
-  doi          = {10.13140/RG.2.2.15881.70240},
-  journal      = {ResearchGate.com},
   }
 
 @article{hartley1928,
@@ -893,6 +918,19 @@
   url          = {http://dx.doi.org/10.1037/h0071325},
   }
 
+@article{irwin1927,
+  title        = {On the Frequency Distribution of the Means of Samples from a Population Having any Law of Frequency with Finite Moments, with Special Reference to Pearson's Type II},
+  author       = {J. O. Irwin},
+  journal      = {Biometrika},
+  volume       = {19},
+  number       = {3/4},
+  month        = {December},
+  year         = {1927},
+  pages        = {225-239},
+  url          = {https://doi.org/10.2307/2331960}
+  }
+
+Published By: Oxford University Press
 @book{jazwinski1970,
   title        = {Stochastic Processes and Filtering Theory},
   publisher    = {Dover Books on Electrical Engineering},
@@ -1615,6 +1653,17 @@
   pages        = {176},
   url          = {http://books.google.com/books?vid=ISBN9780412246203},
   urlw         = {http://www.worldcat.org/isbn/9780412246203},
+  }
+
+@article{sorenson1970,
+  title        = {Least-squares estimation: from Gauss to Kalman},
+  author       = {H. W. Sorenson},
+  institution  = {University of California, San Diego},
+  journal      = {IEEE Spectrum},
+  month        = {July},
+  year         = {1970},
+  pages        = {63--68},
+  url          = {http://pzs.dstu.dp.ua/DataMining/mls/bibl/Gauss2Kalman.pdf},
   }
 
 @article{sorzano2014,
