--- a/common/estimate.tex
+++ b/common/estimate.tex
@@ -139,7 +139,7 @@ The integration itself may be estimated using \ope{Monte Carlo Integration}.\foo
 \end{figure}
 
 Optimization requires a criterion against which the quality of an
-estimate is measured.\footnote{\citergc{srv}{chapters 3, 5}{013125295X}.}
+estimate is measured.\footnote{\citergc{srv}{013125295X}{chapters 3, 5}.}
 The most demanding and general criterion is the \prope{Bayesian} criterion.
 The Bayesian criterion requires knowledge of the probability
 distribution functions and the definition of a \fncte{cost function}.
