--- a/common/harPoly.tex
+++ b/common/harPoly.tex
@@ -1208,14 +1208,14 @@ Let $\Dn$ be the \fncte{Dirichlet Kernel} with period $\tau$ \xref{def:dkernel}.
   \sum_{n=0}^{\xN-1} \cos\brp{nx} 
     &=& \frac{1}{2} + \frac{\sin\brp{\brs{\xN-\frac{1}{2}}x}}
                            {2\sin\brp{\frac{1}{2}x}}
-    &=& \frac{\sin\brp{\brs{\xN-\frac{1}{2}}x}+\sin\brp{\frac{1}{2}x}}
+    &=& \frac{\sin\brp{\frac{1}{2}x} + \sin\brp{\brs{\xN-\frac{1}{2}}x} }
              {2\sin\brp{\frac{1}{2}x}}
     & \forall x\in\R
   \\
   \sum_{n=0}^{\xN-1} \sin\brp{nx} 
-    &=& \frac{1}{2}\cot\brp{\frac{1}{2}x} + \frac{\cos\brp{\brs{\xN-\frac{1}{2}}x}}
+    &=& \frac{1}{2}\cot\brp{\frac{1}{2}x} - \frac{\cos\brp{\brs{\xN-\frac{1}{2}}x}}
                                                  {2\sin\brp{\frac{1}{2}x}}
-    &=& \frac{\cos\brp{\brs{\xN-\frac{1}{2}}x}+\cos\brp{\frac{1}{2}x}}
+    &=& \frac{ \cos\brp{\frac{1}{2}x} - \cos\brp{\brs{\xN-\frac{1}{2}}x} }
              {2\sin\brp{\frac{1}{2}x}}
     & \forall x\in\R
 \end{array}}
@@ -1272,7 +1272,7 @@ Let $\Dn$ be the \fncte{Dirichlet Kernel} with period $\tau$ \xref{def:dkernel}.
     && \text{by \thme{product identities}}
     && \text{\xref{thm:trig_cs}}
   \\&= \frac{1}{2}\cot\brp{\frac{1}{2}x} 
-     + \frac{\cos\brp{\brs{\xN-\frac{1}{2}}x}}
+     - \frac{\cos\brp{\brs{\xN-\frac{1}{2}}x}}
             {2\sin\brp{\frac{1}{2}x}}
 \end{align*}
 
