--- a/common/norm_minimization.tex
+++ b/common/norm_minimization.tex
@@ -69,7 +69,7 @@ In this section we present two types of norm minimization:\footnote{
 \begin{enume}
   \item minimum mean square estimation (MMSE): \\
         The MMS estimate is a \prope{stochastic} estimate.
-        To compute the MMS estimate, the we do not need to know
+        To compute the MMS estimate, we do not need to know
         the actual data values, but we must know certain system statistics
         which are the
         input data autocorrelation and input/output crosscorrelation.
